After updating to Beta 95, Firefox launched with no title bar
Categories
(Firefox :: Toolbars and Customization, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr91 | --- | unaffected |
| firefox93 | --- | unaffected |
| firefox94 | --- | unaffected |
| firefox95 | + | verified |
| firefox96 | --- | verified |
People
(Reporter: scook0+bugzilla, Assigned: emilio)
References
(Regression)
Details
(Keywords: regression, Whiteboard: regression)
Attachments
(1 file)
|
48 bytes,
text/x-phabricator-request
|
pascalc
:
approval-mozilla-beta+
|
Details | Review |
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:95.0) Gecko/20100101 Firefox/95.0
Steps to reproduce:
I had previously configured Firefox to show the regular system title bar.
I was running Firefox 94 on the beta channel, and was prompted to restart the browser for an update.
Actual results:
After updating, there was no title bar. Thus there was no way to move the Firefox window, or minimize/maximize/close it using the usual buttons on the title bar.
Eventually I tried "Customize Toolbar", where I found the Title Bar checkbox that had somehow been forcibly turned off during the update. Checking the box cause the title bar to reappear as desired.
Expected results:
The browser should have continued to respect the "Title Bar" setting across upgrades.
Comment 1•4 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Firefox::Toolbars and Customization' component, and is moving the bug to that component. Please revert this change in case you think the bot is wrong.
| Reporter | ||
Comment 2•4 years ago
|
||
Just ran into this on my Mac as well (with an unrelated profile), so it wasn't a one-off.
Before updating I deliberately went into "Customize Toolbar" and explicitly toggled "Title Bar" off and on, to see if that would make any difference.
Then after quitting and applying the update (95.0b2), I launched Firefox and found that my title bars had been turned off.
As before, I was able to manually turn them back on after the update.
Comment 3•4 years ago
|
||
Setting this to NEW as I could reproduce this when updating from Firefox 94 Beta to Firefox 95 beta - tested on macOS Big Sur 11.6 and Windows 10 x64.
Manually looked for a regression window and the Title Bar is firstly missing when updating to Nightly 95.0a1 from October 22nd - build ID: 20211022213234.
Comment 4•4 years ago
|
||
:simona.marcu, since this bug is a regression, could you fill (if possible) the regressed_by field?
For more information, please visit auto_nag documentation.
Updated•4 years ago
|
Updated•4 years ago
|
Updated•4 years ago
|
Comment 5•4 years ago
•
|
||
Could it have been regressed by bug 1736518? It was a Linux bug but some of the files modified seem to be shared ones across OSes. Martin?
Comment 6•4 years ago
|
||
Yes, that's possible, especially https://phabricator.services.mozilla.com/D129004 . Emilio, any idea here?
Thanks.
| Assignee | ||
Comment 7•4 years ago
|
||
Gijs do you know how to potentially migrate users from a bool to an int pref? Do we need to keep the old pref as is, then use a new one or something?
| Assignee | ||
Comment 9•4 years ago
|
||
Something like this ought to do?
Updated•4 years ago
|
Comment 10•4 years ago
|
||
Comment 11•4 years ago
|
||
| bugherder | ||
| Assignee | ||
Comment 12•4 years ago
|
||
Comment on attachment 9250167 [details]
Bug 1739539 - Rename titlebar pref and add migration from old pref. r=Gijs
Beta/Release Uplift Approval Request
- User impact if declined: Avoids resetting user titlebar preferences.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: Yes
- If yes, steps to reproduce: comment 0
- List of other uplifts needed: none
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Relatively simple rename + migration.
- String changes made/needed: none
| Assignee | ||
Updated•4 years ago
|
Updated•4 years ago
|
Comment 13•4 years ago
|
||
Looks like I don't need to do anything here anymore. Sorry, I was out sick.
(Also, you got very lucky with the migration being upliftable, nice!)
Comment 14•4 years ago
|
||
Comment on attachment 9250167 [details]
Bug 1739539 - Rename titlebar pref and add migration from old pref. r=Gijs
Approved for 95 beta 8, thanks.
Comment 15•4 years ago
|
||
| bugherder uplift | ||
Comment 16•4 years ago
|
||
I have reproduced this issue using Firefox 94.0b1 on Win 10 x64.
I can confirm this issue is fixed, I verified using Firefox 95.0b9 on Win 10 x64 and macOS 10.15.
Comment 17•4 years ago
|
||
Verified on 96.0a1 the issue is fixed, tested on Win 10 x64 and macOS 10.15.
Description
•