Bug 1739539 - Rename titlebar pref and add migration from old pref. r=mconley

Something like this ought to do?

Differential Revision: https://phabricator.services.mozilla.com/D130858